initial commit after segmenting client and server

--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,27 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+html, body, #app, #app>div {
+  height: 100%
+} 
+
+#root {
+  height: inherit;
+}
+
+.auth-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
 }
 
 .App-link {
